[gd_scene load_steps=34 format=3 uid="uid://83qg0j5exfyc"]

[ext_resource type="Script" uid="uid://yspisjr3b8y5" path="res://Characters/Player.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://dq0nxxg68sdw7" path="res://Resources/player-cast.png" id="2_58vhh"]
[ext_resource type="Script" uid="uid://5usjmpb66eia" path="res://Characters/PlayerCamera.gd" id="2_nwlvs"]
[ext_resource type="Texture2D" uid="uid://e73ivebdym3s" path="res://Resources/player-sprite.png" id="2_vjjrh"]
[ext_resource type="Texture2D" uid="uid://dh3jx4vydfqin" path="res://Resources/WhiteCircle.png" id="3_utm12"]
[ext_resource type="Script" uid="uid://drf17f1mu335f" path="res://StateMachine/StateMachine.gd" id="5_v6d5b"]
[ext_resource type="Texture2D" uid="uid://c1jnye2gghn2r" path="res://Resources/player-die.png" id="5_x35ji"]
[ext_resource type="Script" uid="uid://dydpt5ghjcxq6" path="res://Characters/PlayerStates/PlayerCastingState.gd" id="6_c3bgu"]
[ext_resource type="AudioStream" uid="uid://byxsq50pix5c4" path="res://Resources/audio/sfx/cast.ogg" id="7_lli6r"]
[ext_resource type="Script" uid="uid://c7818rcrjewfw" path="res://Characters/PlayerStates/PlayerDashingState.gd" id="7_nwlvs"]
[ext_resource type="Script" uid="uid://dl1fa8smwli0i" path="res://Characters/PlayerStates/PlayerIdleState.gd" id="8_x35ji"]
[ext_resource type="Script" uid="uid://cfs5h0csie147" path="res://Characters/PlayerStates/PlayerMovingState.gd" id="9_o8u7c"]
[ext_resource type="Script" uid="uid://ccujry5bs3j0l" path="res://Characters/PlayerStates/PlayerDeadState.gd" id="12_o8u7c"]

[sub_resource type="AtlasTexture" id="AtlasTexture_64fup"]
atlas = ExtResource("2_58vhh")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_l7es1"]
atlas = ExtResource("2_58vhh")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ycf05"]
atlas = ExtResource("2_58vhh")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_878xk"]
atlas = ExtResource("2_58vhh")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_o8u7c"]
atlas = ExtResource("5_x35ji")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_lli6r"]
atlas = ExtResource("5_x35ji")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_7wf5q"]
atlas = ExtResource("5_x35ji")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_r52jx"]
atlas = ExtResource("5_x35ji")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ijtlc"]
atlas = ExtResource("5_x35ji")
region = Rect2(0, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ci4k"]
atlas = ExtResource("2_vjjrh")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_tveo4"]
atlas = ExtResource("2_vjjrh")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_e1s0h"]
atlas = ExtResource("2_vjjrh")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_pxqaj"]
atlas = ExtResource("2_vjjrh")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_26gnf"]
atlas = ExtResource("2_vjjrh")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ejoax"]
atlas = ExtResource("2_vjjrh")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_agmqj"]
atlas = ExtResource("2_vjjrh")
region = Rect2(96, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_rx2es"]
atlas = ExtResource("2_vjjrh")
region = Rect2(112, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_bv2qp"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_64fup")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l7es1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ycf05")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_878xk")
}],
"loop": false,
"name": &"cast",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o8u7c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lli6r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7wf5q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r52jx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ijtlc")
}],
"loop": false,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ci4k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tveo4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e1s0h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pxqaj")
}],
"loop": true,
"name": &"idle",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_26gnf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ejoax")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_agmqj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rx2es")
}],
"loop": true,
"name": &"walk",
"speed": 4.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_bixge"]
radius = 8.0

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_lli6r"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 1

[node name="CharacterBody2D" type="CharacterBody2D"]
collision_layer = 9
collision_mask = 105
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1")

[node name="Camera2D" type="Camera2D" parent="."]
process_callback = 0
position_smoothing_enabled = true
position_smoothing_speed = 30.0
script = ExtResource("2_nwlvs")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_bv2qp")
animation = &"death"
autoplay = "idle"

[node name="Shadow" type="Polygon2D" parent="."]
z_index = -1
color = Color(0, 0, 0, 0.298039)
polygon = PackedVector2Array(-2, 6, -8, 7, -9, 8, -7, 9, 6, 9, 7, 8, 6, 7)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_bixge")

[node name="DashTimer" type="Timer" parent="."]
wait_time = 2.5
one_shot = true

[node name="MultiCastTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="CastTimer" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
navigation_layers = 2
avoidance_enabled = true

[node name="ProjectilePivot" type="Node2D" parent="."]
rotation = -6.28319

[node name="ProjectileSpawnPos" type="Marker2D" parent="ProjectilePivot"]
position = Vector2(2, 8.93276e-06)

[node name="PointLight2D" type="PointLight2D" parent="."]
visible = false
range_layer_min = -100
shadow_enabled = true
shadow_color = Color(0, 0, 0, 1)
texture = ExtResource("3_utm12")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="." groups=["sfx_stream_players"]]
stream = ExtResource("7_lli6r")
volume_db = 5.0
max_polyphony = 10

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("5_v6d5b")
initial_state = NodePath("Idle")
metadata/_custom_type_script = "uid://drf17f1mu335f"

[node name="Casting" type="Node" parent="StateMachine" node_paths=PackedStringArray("player")]
script = ExtResource("6_c3bgu")
cast_time = 0.15
player = NodePath("../..")
metadata/_custom_type_script = "uid://dydpt5ghjcxq6"

[node name="Dashing" type="Node" parent="StateMachine" node_paths=PackedStringArray("player")]
script = ExtResource("7_nwlvs")
player = NodePath("../..")
metadata/_custom_type_script = "uid://c7818rcrjewfw"

[node name="Idle" type="Node" parent="StateMachine" node_paths=PackedStringArray("player")]
script = ExtResource("8_x35ji")
player = NodePath("../..")
metadata/_custom_type_script = "uid://dl1fa8smwli0i"

[node name="Moving" type="Node" parent="StateMachine" node_paths=PackedStringArray("player")]
script = ExtResource("9_o8u7c")
player = NodePath("../..")
metadata/_custom_type_script = "uid://cfs5h0csie147"

[node name="Dead" type="Node" parent="StateMachine" node_paths=PackedStringArray("player")]
script = ExtResource("12_o8u7c")
player = NodePath("../..")
metadata/_custom_type_script = "uid://d1tq2i2wkva5c"

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_lli6r")

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="StateMachine/Dead" method="_on_death_animation_finished"]
[connection signal="timeout" from="DashTimer" to="StateMachine/Dashing" method="_on_dash_timer_timeout"]
[connection signal="timeout" from="MultiCastTimer" to="." method="_on_multi_cast_timer_timeout"]
[connection signal="timeout" from="CastTimer" to="." method="_on_cast_timer_timeout"]
